# about42

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  render.yaml  requirements.txt
.agents/skills/: skills-lock.json
.github/workflows/: daily-pipeline.yml  inbox.yml  moderate.yml
agents/: database.py  ideator.py  pipeline.py  rag.py  wiki_updater.py  writer.py  youtube.py
scripts/: pipeline.py  preprocess.py  wiki_editor.py
site/: astro.config.mjs  package-lock.json  package.json
site/.astro/: content.d.ts
site/.astro/collections/: articles.schema.json  wiki.schema.json
site/src/content/: config.ts
site/src/content/articles/: golosovanie-za-pobedu-kak-pyaterka-zapuskaet-interaktivnyy-c.md  pyaterka-v-mnogoobrazii-igr-kak-on-derzhit-interes-auditorii.md  pyaterka-zapuskaet-interaktivnyy-marafon-iz-neskolkih-igr-s-.md  soobshchestvo-pyaterki-kak-chat-i-poklonniki-formiruyut-kont.md  za-kulisami-strimov-pyaterki-podgotovka-k-efiru.md  zvezda-na-grani-moderatsii-spor-vokrug-bana-i-dobavleniya-na.md  zvezda-protiv-bana-goryachiy-razbor-spora-vokrug-dobavleniya.md
site/src/content/wiki/: Pyaterka.md  index.md
site/src/layouts/: Article.astro  WikiPage.astro
site/src/pages/: index.astro
site/src/pages/articles/: [...slug].astro
site/src/pages/wiki/: [...slug].astro
site/src/styles/: global.css
wiki/: index.md
wiki/raw/: 2026-06-05_АРТИКСА_ЗАБАНИЛИ__САМАЯ_ИМБОВА_ФЕРМА_ГВАРДОВ_от_ЗВ.md
