[project]
name = "hyperise"
version = "0.1.0"
description = "Automated fan-site about streamer Pyaterka (5opka)"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.5.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.0.1",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "deepagents>=0.6.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
