[project]
name = "hyperise"
version = "0.1.0"
description = "Automated fan-site about streamer Pyaterka (5opka)"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.5.0",
    "openai>=1.30.0",
    "telethon>=1.35.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "deepagents>=0.6.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
